--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {"src":  "app.py", "use":  "@vercel/python"}
+    { "src": "app.py", "use": "@vercel/python" }
   ],
   "routes": [
-    {"src":  "/(.*)", "dest":  "app.py"}
+    { "src": "/(.*)", "dest": "app.py" }
   ],
-  "ignoreFiles": [
-    "path/to/large/file/*"
-  ]
+  "excludeFiles": "model.pkl"
 }
